@@ -158,6 +158,7 @@ total-input-value=Total Input Value: __1__
 total-output-value=Total Output Value: __1__
 productivity-bonus=Productivity
 cost=Cost: __1__
+show-only-claimed=Show only claimed
 
 [hextorio]
 intro=Click on the questbook button in the top left.
